# ithil

./: README.md  TODO.md  ithil.cabal  lambda.cabal  stack.yaml
app/: Main.hs
lua/: lambda.luac
resources/lua/: hello.lua  lambda.lua
src/: Args.hs  CodeGen.hs  Compiler.hs  IIR.hs  Lib.hs  Lua.hs  Parser.hs  Types.hs
src/Compiler/: Types.hs
src/IIR/: Compiler.hs  Interpreter.hs  Types.hs
src/Lang/: Lexer.hs  Parser.hs  Types.hs
src/Parser/: Errors.hs  Tokenizer.hs  Types.hs
test/: Spec.hs
test/Test/Lang/: Lexer.hs  Parser.hs  Types.hs
