name:                ithil
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ithil#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -Werror=incomplete-patterns
  exposed-modules:     Lib,
                       Args,
                       CodeGen,
                       Compiler,
                       Compiler.Types,
                       IIR,
                       IIR.Compiler,
                       IIR.Types,

                       Lang.Lexer,
                       Lang.Parser,
                       Lang.Types,

                       Lua,
                       Parser,
                       Parser.Errors,
                       Parser.Tokenizer,
                       Parser.Types,
                       Types
  build-depends:       base >= 4.7 && < 5,
                       binary,
                       bytestring,
                       containers,
                       extra,
                       lens,
                       megaparsec,
                       mtl,
                       optparse-applicative,
                       text,
                       transformers
  default-language:    Haskell2010

executable ithil
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ithil
                     , binary
                     , bytestring
                     , containers
                     , extra
                     , lens
                     , megaparsec
                     , mtl
                     , optparse-applicative
                     , text
                     , transformers
  default-language:    Haskell2010

test-suite ithil-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Test.Lang.Lexer
                     , Test.Lang.Parser
  build-depends:       base
                     , ithil
                     , containers
                     , extra
                     , megaparsec
                     , mtl
                     , tasty
                     , tasty-hunit
                     , text
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/lambda
