name:                lambda
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/lambda#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -Werror=incomplete-patterns
  exposed-modules:     Lib,
                       CodeGen,
                       Compiler,
                       Compiler.Types,
                       IIR,
                       Lua,
                       Parser,
                       Types
  build-depends:       base >= 4.7 && < 5,
                       binary,
                       binary-bits,
                       bytestring,
                       containers,
                       extra,
                       lens,
                       megaparsec,
                       mtl,
                       text,
                       transformers
  default-language:    Haskell2010

executable ithil
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       lambda,
                       binary,
                       binary-bits,
                       bytestring,
                       containers,
                       extra,
                       lens,
                       megaparsec,
                       mtl,
                       text,
                       transformers
  default-language:    Haskell2010

test-suite lambda-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lambda
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/lambda
